# ipi-ase-orca-md

./: .gitignore  README.md  ipi_ase_orca_template.py  pyproject.toml
docs/superpowers/plans/: 2026-04-15-ipi-ase-orca-md.md
docs/superpowers/specs/: 2026-04-15-ipi-ase-orca-md-design.md
examples/: README.md  native_xtb2_angle_windows.py  native_xtb2_distance_metad.py  native_xtb2_distance_restraint.py  native_xtb2_wtmetad_5ps.py
examples/generated_jobs/native_xtb2_wtmetad_example/: COLVAR  HILLS  README.job.md  ase_orca_client.py  init.xyz  input.xml  job_config.json  native_xtb2_wtmetad_example.out  run_all.sh  run_client.sh  run_ipi.sh  submit_job.sh
examples/generated_jobs/native_xtb2_wtmetad_example/orca_native_xtb2/: orca.inp  orca.out
tests/: conftest.py  test_template.py
