[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ipi-ase-orca-md"
version = "0.1.0"
requires-python = ">=3.11"
description = "Single-file i-PI + ASE + ORCA job template generator."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
py-modules = ["ipi_ase_orca_template"]
